# ToDoFastApi

./: pyproject.toml
app/: main.py  settings.py
