[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ammara Gul <umaraaziz456@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
requests = "^2.31.0"
sqlmodel = "^0.0.16"
mypy = "^1.9.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
